--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ a{
 
 .hero-title {
     padding-top: 188px;
-    padding-bottom: 48px;
+    padding-bottom: 188px;
     max-width: 496px;
     margin: 0 auto;
     color: #fff;
@@ -126,9 +126,10 @@ a{
 }
 
 .main-title-button {
-    display: inline-block;
+    display: block;
     margin: 0 auto;
     border-radius: 4px;
+    border: none;
     padding: 16px 32px;
     font-weight: 500;
     font-size: 16px;
@@ -137,6 +138,8 @@ a{
     color: #fff;
     background: #4d5ae5;
     cursor: pointer;
+    min-width: 169px;
+    height: 56px
 }
 
 
