--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,6 @@ a {
 /* Team Section */
 .team-section {
     background-color: #f4f4fd;
-    text-align: center;
     padding: 120px 0;
 }
 
@@ -217,36 +216,53 @@ a {
     letter-spacing: 0.02em;
     line-height: 1.11;
     text-transform: capitalize;
+    text-align: center;
 }
 
 .team-list {
     display: flex;
     gap: 24px;
     justify-content: center;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 .team-card {
     background-color: #ffffff;
-    border: 1px solid #e7e9fc;
+    flex-basis: calc((100% - 72px) / 4);
+    border-radius: 0 0 4px 4px;
+    overflow: hidden;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.08);
     text-align: center;
 }
 
-.team-name {
+.team-card img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.team-card-content {
+    padding: 32px 0;
+}
+
+.team-card-name {
     font-size: 20px;
     font-weight: 500;
     color: #2e2f42;
-    margin-top: 24px;
     margin-bottom: 8px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
 }
 
-.team-role {
+.team-card-role {
     font-size: 16px;
     color: #434455;
-    margin-bottom: 24px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
 }
 
 /* Portfolio Section */
