--- a/css/styles.css
+++ b/css/styles.css
@@ -268,8 +268,8 @@ a {
 /* Portfolio Section */
 .features-section {
     background-color: #fff;
-    text-align: center;
     padding: 120px 0;
+    text-align: center;
 }
 
 .features-section-title {
@@ -277,43 +277,50 @@ a {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-align: center;
-    text-transform: capitalize;
     color: #2e2f42;
     margin-bottom: 72px;
+    text-transform: capitalize;
 }
 
 .features-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
-    justify-content: center;
+    gap: 48px 24px;
+    /* row-gap + column-gap */
     padding: 0;
+    margin: 0;
+    list-style: none;
+    justify-content: center;
 }
 
 .features-card {
-    width: 360px;
-    text-align: left;
+    width: calc((100% - 48px) / 3);
     background-color: #fff;
 }
 
-.feature-name {
-    font-weight: 500;
+.features-card-content {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    border-radius: 0 0 4px 4px;
+}
+
+.features-card-title {
     font-size: 20px;
+    font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-top: 32px;
+    text-align: center;
     margin-bottom: 8px;
 }
 
-.feature-item {
-    font-weight: 400;
+.features-card-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    margin-bottom: 32px;
+    text-align: center;
 }
 
 /* Footer */
